# GnastyPlasmaPatcher

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: buildinfo.cmake
src/cli/: log2stdio.cpp  log2stdio.hpp  main.cpp
src/gui/: key_finder.cpp  key_finder.hpp  log2gui.cpp  log2gui.hpp  main.cpp  main.hpp
src/lib/: buildinfo.cpp  buildinfo.hpp  errors.hpp  merger.cpp  patcher.cpp  patcher.hpp  patcher_base.cpp  patcher_collision.cpp  span_hacker.cpp  span_hacker.hpp
